# configAPI

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
include/: crow_all.h
src/: api.cpp  config.cpp  config.hpp  json_xml.cpp  routes.cpp  routes.hpp  sqlite.hpp
src/schema/: chargers.json  config.json  data-model.json  ems-model.json  ems.db  ems.xml  emsoutput.xml
src/schema/db/: data-model.db
src/schema/etc/: ems.xml  emsoutput.xml
src/schema/old/: config.json  ems.db  evse.json  forwarding.json  json_xml  network.json
